--- a/templates/main.html
+++ b/templates/main.html
@@ -42,9 +42,51 @@
     </div>
 </div>
 
-<div class="dialog">
-    <div class="dialog-box">
+<div id="modalEat" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="modal-title">Eat</span>
+            </div>
+            <div class="modal-body">
+                food stub
+            </div>
+            <div class="modal-footer">
+                food footer stub
+            </div>
+        </div>
+    </div>
+</div>
 
+<div id="modalWeigh" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="modal-title">Weigh</span>
+            </div>
+            <div class="modal-body">
+                weigh stub
+            </div>
+            <div class="modal-footer">
+                weigh footer stub
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="modalLove" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="modal-title">Love</span>
+            </div>
+            <div class="modal-body">
+                love stub
+            </div>
+            <div class="modal-footer">
+                food footer stub
+            </div>
+        </div>
     </div>
 </div>
 
@@ -52,15 +94,15 @@
 $(function(w){
 
 let btnEatClick = function(e){
-    alert("btnEatClick");
+    $("#modalEat").modal();
 };
 
 let btnWeighClick = function(e){
-    alert("btnWeighClick");
+    $("#modalWeigh").modal();
 };
 
 let btnLoveClick = function(e){
-    alert("btnLoveClick");
+    $("#modalLove").modal();
 };
 
 $("#btnEat").on("click", btnEatClick);
