The let statements for these button click functions is bad form so switched to const.

--- a/templates/main.html
+++ b/templates/main.html
@@ -93,15 +93,15 @@
 <script>
 $(function(w){
 
-let btnEatClick = function(e){
+const btnEatClick = function(e){
     $("#modalEat").modal();
 };
 
-let btnWeighClick = function(e){
+const btnWeighClick = function(e){
     $("#modalWeigh").modal();
 };
 
-let btnLoveClick = function(e){
+const btnLoveClick = function(e){
     $("#modalLove").modal();
 };
 
