Fleshed out the layout of the main 'weight' dialog

--- a/templates/main.html
+++ b/templates/main.html
@@ -65,10 +65,34 @@
                 <span class="modal-title">Weigh</span>
             </div>
             <div class="modal-body">
-                weigh stub
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <h3>Today's Weight</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <input type="number" id="numWeightEntry" class="input form-control" />
+                        </div>
+                        <div class="col-xs-1">
+                            <button class="btn" id="btnAddWeight">Add</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <button class="btn btn-primary form-control" id="btnWeightHistory">History</button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
-                weigh footer stub
+                <button class="btn btn-primary">Close</button>
             </div>
         </div>
     </div>
