--- a/templates/main.html
+++ b/templates/main.html
@@ -49,10 +49,46 @@
                 <span class="modal-title">Love</span>
             </div>
             <div class="modal-body">
-                love stub
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <h3>Self Care Choices</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <select size="4" id="selSelfCareChoice" class="input form-control">
+                                <option value="Makeup">Makeup</option>
+                                <option value="Bubble Bath">Bubble Bath</option>
+                                <option value="Trim Nails">Trim Nails</option>
+                            </select>
+                        </div>
+                        <div class="col-xs-1">
+                            <button class="btn" id="btnSelfCareSubmit">Did It</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <h3>Add New Self Care Thing</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <input type="input" class="input form-control" id="textNewSelfCare" />
+                        </div>
+                        <div class="col-xs-1">
+                            <button class="btn" id="btnNewSelfCare">Add</button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
-                love footer stub
+                <button class="btn btn-primary">Close</button>
             </div>
         </div>
     </div>
