--- a/templates/main.html
+++ b/templates/main.html
@@ -58,9 +58,9 @@
                     <div class="row">
                         <div class="col-xs-5">
                             <select size="4" id="selSelfCareChoice" class="input form-control">
-                                <option value="Makeup">Makeup</option>
-                                <option value="Bubble Bath">Bubble Bath</option>
-                                <option value="Trim Nails">Trim Nails</option>
+                                <option value="Gym Treadmill">Gym Treadmill</option>
+                                <option value="Home Aerobic Workout">Home Aerobobic Workout</option>
+                                <option value="Steamy Bath">Steamy Bath</option>
                             </select>
                         </div>
                         <div class="col-xs-1">
