Move the javascript out to it's own separate file.

--- a/templates/main.html
+++ b/templates/main.html
@@ -259,31 +259,8 @@
 </div>
 
 
-<script>
-$(function(w){
+<script src="static/ewl.js">
 
-const btnEatClick = function(e){
-    $("#modalEat").modal();
-};
-
-const btnWeighClick = function(e){
-    $("#modalWeigh").modal();
-};
-
-const btnLoveClick = function(e){
-    $("#modalLove").modal();
-};
-
-const btnWeightHistoryClick = function(e){
-    $("#modalWeightHistory").modal();
-};
-
-$("#btnEat").on("click", btnEatClick);
-$("#btnWeigh").on("click", btnWeighClick);
-$("#btnLove").on("click", btnLoveClick);
-$("#btnWeightHistory").on("click", btnWeightHistoryClick);
-
-}(window));
 
 </script>
 </body>
