Add a visual sample weight tracking chart thrown together from within open office and gimp

--- a/templates/main.html
+++ b/templates/main.html
@@ -246,7 +246,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-5">
-                            <h4>(TODO: Add weight history chart here)</h4>
+                            <img src="static/chart_sample.png" />
                         </div>
                     </div>
                 </div>
