Move the dialogs around and comment title them to make them easier to keep track of on the page.

--- a/templates/main.html
+++ b/templates/main.html
@@ -43,98 +43,8 @@
     </div>
 </div>
 
-<div id="modalLove" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <span class="modal-title">Love</span>
-            </div>
-            <div class="modal-body">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xs-5">
-                            <h3>Self Care Choices</h3>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-5">
-                            <select size="4" id="selSelfCareChoice" class="input form-control">
-                                <option value="Gym Treadmill">Gym Treadmill</option>
-                                <option value="Home Aerobic Workout">Home Aerobobic Workout</option>
-                                <option value="Steamy Bath">Steamy Bath</option>
-                            </select>
-                        </div>
-                        <div class="col-xs-1">
-                            <button class="btn" id="btnSelfCareSubmit">Did It</button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-6">
-                            &nbsp;
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-5">
-                            <h3>Add New Self Care Thing</h3>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-5">
-                            <input type="input" class="input form-control" id="textNewSelfCare" />
-                        </div>
-                        <div class="col-xs-1">
-                            <button class="btn" id="btnNewSelfCare">Add</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-primary">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div id="modalWeigh" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <span class="modal-title">Weigh</span>
-            </div>
-            <div class="modal-body">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xs-4">
-                            <h3>Today's Weight</h3>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-4">
-                            <input type="number" id="numWeightEntry" class="input form-control" />
-                        </div>
-                        <div class="col-xs-1">
-                            <button class="btn" id="btnAddWeight">Add</button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-5">
-                            &nbsp;
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-5">
-                            <button class="btn btn-primary form-control" id="btnWeightHistory">History</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-primary">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
+<!--  Eat Dialog Box-->
 <div id="modalEat" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -198,6 +108,50 @@
     </div>
 </div>
 
+
+<!-- Weigh Dialog Box -->
+<div id="modalWeigh" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="modal-title">Weigh</span>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <h3>Today's Weight</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <input type="number" id="numWeightEntry" class="input form-control" />
+                        </div>
+                        <div class="col-xs-1">
+                            <button class="btn" id="btnAddWeight">Add</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <button class="btn btn-primary form-control" id="btnWeightHistory">History</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Weight History Dialog Box -->
 <div id="modalWeightHistory" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -257,6 +211,61 @@
         </div>
     </div>
 </div>
+
+
+<!-- Love Dialog Box -->
+<div id="modalLove" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="modal-title">Love</span>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <h3>Self Care Choices</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <select size="4" id="selSelfCareChoice" class="input form-control">
+                                <option value="Gym Treadmill">Gym Treadmill</option>
+                                <option value="Home Aerobic Workout">Home Aerobobic Workout</option>
+                                <option value="Steamy Bath">Steamy Bath</option>
+                            </select>
+                        </div>
+                        <div class="col-xs-1">
+                            <button class="btn" id="btnSelfCareSubmit">Did It</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <h3>Add New Self Care Thing</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">
+                            <input type="input" class="input form-control" id="textNewSelfCare" />
+                        </div>
+                        <div class="col-xs-1">
+                            <button class="btn" id="btnNewSelfCare">Add</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 <script src="static/ewl.js">
