--- a/templates/main.html
+++ b/templates/main.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-4">
-                            <input id="txtNewFood" class="input form-control" value="txtNewFood" />
+                            <input id="txtNewFood" class="input form-control" />
                         </div>
                         <div class="col-xs-2">
                             <button class="btn" id="btnAddNewFood">Add New Food</button>
